--- a/MyConstructionAPI_CAJIACO/appsettings.json
+++ b/MyConstructionAPI_CAJIACO/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "AllowedHosts": "*",
+  "ProyectoProgra6ApiKey": "WirProyectoProgra6AsdZxc12345",
   "ConnectionStrings": {
     "CNNSTR": "SERVER=.; DATABASE=MyConstructionBD; INTEGRATED SECURITY=FALSE; USER ID=MyConstructionAPIUser; PASSWORD="
   }
